--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
-sonar.organization=<reemplazar con tu SonarCloud organization key>
-sonar.projectKey=<reemplazar con tu projectKey generado en Sonarcloud>
+sonar.organization=cortegacasanova
+sonar.projectKey=cortegacasanova_ej-cicd
